--- a/styles/VendingMachine.module.css
+++ b/styles/VendingMachine.module.css
@@ -1,5 +1,27 @@
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
+
+.main {
+  padding: 2em;
+  border: 1px solid orange;
+}
+
 .main h1 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 2em;
+  font-family: "Nunito", sans-serif;
+  font-size: 1em;
   font-weight: bold;
+}
+
+.container {
+  border: 1px solid green;
+}
+
+.container h2 {
+  font-size: 12px;
+}
+
+@media screen and (min-width: 700px) {
+  /* For tablets and laptop screens */
+  .main h1 {
+    font-size: 2em;
+  }
 }
